--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -199,7 +199,7 @@ Mechanic.",
   author  = "B Muller",
   journal = "Journal of Engineering Mathematics",
   volume  = "34",
-  pages   = "97–109",
+  pages   = "97-109",
   year    = "1998",
   }  
 
@@ -208,7 +208,6 @@ Mechanic.",
   author  = "B Cockburn and C Johnson and C Shu and E Tadmor",
   journal = "Lecture Notes in Mathematics",
   volume  = "1697",
-%  pages   = "97-109",
   year    = "1998",
   }
 
@@ -217,18 +216,16 @@ Mechanic.",
   author  = "B Cockburn and G Karniadakis and C Shu",
   journal = "Lecture Notes in Computer Science and Engineering",
   volume  = "11",
-%  pages   = "97-109",
   year    = "2000",
   }
 
   
 @article{nozzle_exact,
-  title   = "Liquid and liquid-gas flows at all speeds: Reference solutions and numerical schemes.",
+  title   = "Liquid and liquid-gas flows at all speeds.",
   author  = "S LeMartelot and B Nkonga and R Saurel",
-  journal = "Research report \tcr{why not cite their jcp-2013?}",
-  volume  = "7935",
-%  pages   = "97–109",
-  year    = "2012",
+  journal = "Journal of Computational Physics",
+  volume  = "255",
+  year    = "2013",
   }
 
 @book{convergence_book,
