--- a/low_mach.tex
+++ b/low_mach.tex
@@ -1099,9 +1099,25 @@ The steady-state for Mach numbers ranging from $M_{\infty} = 10^{-3}$ to $M_{\in
           %(or a blank line to force the subfigure onto a new line)
         \begin{subfigure}[b]{0.495\textwidth}
                 \centering
+                \includegraphics[width=\textwidth]{CylinderMach1em6ZoomIn.png}
+                \caption{Steady-state solution at $M_{\infty}=10^{-6}$.}
+                \label{fig:cyl_1em6}
+        \end{subfigure}
+         %add desired spacing between images, e. g. ~, \quad, \qquad etc. 
+          %(or a blank line to force the subfigure onto a new line)
+        \begin{subfigure}[b]{0.495\textwidth}
+                \centering
                 \includegraphics[width=\textwidth]{CylinderMach1em7ZoomIn.png}
                 \caption{Steady-state solution at $M_{\infty}=10^{-7}$.}
                 \label{fig:cyl_1em7}
+        \end{subfigure}
+          %add desired spacing between images, e. g. ~, \quad, \qquad etc. 
+          %(or a blank line to force the subfigure onto a new line)
+        \begin{subfigure}[b]{0.495\textwidth}
+                \centering
+                \includegraphics[width=\textwidth]{CylinderMach1em8ZoomIn.png}
+                \caption{Steady-state solution at $M_{\infty}=10^{-8}$.}
+                \label{fig:cyl_1em8}
         \end{subfigure}
         \caption{Steady-state solution for a subsonic flow over a $2$-D cylinder.}\label{fig:cylinder}
 \end{figure}
@@ -1121,7 +1137,7 @@ $10^{-7}$ & $2.283$ $10^{-7}$ & $1.144$ $10^{-7}$ & $1.99$ \\ \hline
 \end{center}
 \nonumber
 \end{table}
-In \fig{fig:pressure_vel_fluc}, the pressure and velocity fluctuations are plotted as a function of the far field Mach number, on a log-log plot. The pressure and velocity fluctuations are expected to be of the order of the Mach number square and the Mach number, respectively. It ss known that some stabilization methods, alike upwind scheme \cite{guillard}, can produce pressure fluctuations with the wrong order. The objective of \fig{fig:pressure_vel_fluc} is to show that the new definition of the viscosity coefficients yields the correct order in the low Mach limit for both the pressure and velocity variables. For reference purpose, the function $f(M) = M^2$ and $f(M)=M$ are plotted.  
+In \fig{fig:pressure_vel_fluc}, the pressure and velocity fluctuations are plotted as a function of the far field Mach number, on a log-log plot. The pressure and velocity fluctuations are expected to be of the order of the Mach number square and the Mach number, respectively. It is known that some stabilization methods, alike upwind scheme \cite{guillard}, can produce pressure fluctuations with the wrong order. The objective of \fig{fig:pressure_vel_fluc} is to show that the new definition of the viscosity coefficients yields the correct order in the low Mach limit for both the pressure and velocity variables. For reference purpose, the function $f(M) = M^2$ and $f(M)=M$ are plotted.  
 \begin{figure}[H]
 \centering
 \includegraphics[width=\textwidth]{pressure_fluctuation.png}
