change theory and add 1D numerical simulation

--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -243,3 +243,12 @@ Mechanic.",
   pages   = "207-233",
   year    = "1993",
   }
+  
+@article{james,
+  title   = "A contribution to the great Riemann solver debate",
+  author  = "James J Quirk",
+  journal = "NASA Contractor Report 191409",
+  volume  = "ICASE Report No.",
+  pages   = "92-64",
+  year    = "1992",
+  }
